--- a/library_app/mainwindow.ui
+++ b/library_app/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>110</x>
@@ -58,6 +58,24 @@
       <widget class="QTextEdit" name="txt_data"/>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="btnGetAllBooks">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>360</y>
+      <width>161</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>getAllBooks</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
